# rapid-cds-parser

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  cicd.yml  code-scan.yml
src/: cds.lalrpop  lib.rs  main.rs
src/ast/: action_term.rs  entity_term.rs  field_term.rs  function_term.rs  mod.rs  module_term.rs  name_term.rs  param_term.rs  returns_term.rs  service_term.rs  type_term.rs
src/ast/traits/: ast_term.rs  mod.rs  module_usable_term.rs  service_usable_term.rs
