[package]
name = "rapid-cds-parser"
version = "0.1.0"
description = "npm module for rapid parsing of cds"
authors = ["zkud <kudirko.anton@gmail.com>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[build-dependencies]
lalrpop = "0.19.5"

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-5"]
